--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <title>FilterIt</title>
+    <link rel="icon" href=./static/FilterIt_icon.png rel=stylesheet>
   </head>
   <body>
     <div id="app"></div>
